--- a/client/src/index.css
+++ b/client/src/index.css
@@ -706,7 +706,7 @@ nav #nav-right-container #nav-inner-r #link a::selection {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-color: #9dd57c;
+  background-color: #d3f0c7;
   height: 250px;
 }
 
@@ -745,6 +745,48 @@ nav #nav-right-container #nav-inner-r #link a::selection {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+}
+
+.page .overlaycontainer {
+  position: relative;
+  width: auto;
+  height: auto;
+}
+
+.page .overlayartwork {
+  display: block;
+  width: auto;
+  height: auto;
+}
+
+.page .overlayart {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: auto;
+  opacity: 0;
+  -webkit-transition: 0.5s ease;
+  transition: 0.5s ease;
+  background-color: black;
+  margin: 7px 7px 7px 7px;
+}
+
+.page .overlaycontainer:hover .overlayart {
+  opacity: 0.7;
+}
+
+.page .overlaytext {
+  color: white;
+  font-size: 1.5em;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-family: sans-serif;
 }
 
 .page .photo {
@@ -1010,16 +1052,65 @@ nav #nav-right-container #nav-inner-r #link a::selection {
           animation: ani9 0.4s ease-in-out infinite alternate;
 }
 
+.page .row .gallery {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: auto;
+      -ms-flex-align: auto;
+          align-items: auto;
+  -ms-flex-line-pack: start;
+      align-content: start;
+}
+
+.page .art {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: auto;
+      -ms-flex-align: auto;
+          align-items: auto;
+  -ms-flex-line-pack: start;
+      align-content: start;
+  padding: 0 5px;
+}
+
+.page .art-title {
+  margin-top: 10px;
+  font-weight: 600;
+  font-size: 25pt;
+  color: #777;
+  margin-bottom: 10px;
+}
+
+.page .art img {
+  margin: 7px;
+  padding: unset;
+}
+
 .page .gallery {
   max-width: 1250px;
   border-radius: 5px;
   margin: 2% auto;
-  margin-bottom: 5px;
   text-align: center;
-}
-
-.page .gallery div {
-  margin-bottom: 30px;
 }
 
 .page .gallery img {
