--- a/client/src/components/Login/_Login.scss
+++ b/client/src/components/Login/_Login.scss
@@ -43,6 +43,8 @@
   .field-set {
     display: flex;
     flex-direction: column;
+    text-align: start;
+    color: #333;
   }
 
   .input-item {
@@ -54,12 +56,13 @@
     border-radius: 5px;
     outline: none;
     border: none;
+    text-align: center;
   }
 
   /* inputs form  */
   input[class="form-input"] {
     margin-top: 2%;
-    padding: 15px;
+    padding: 15px 150px 15px 150px;
     font-size: 16px;
     font-family: Montserrat, sans-serif;
     color: #5e6472;
@@ -67,6 +70,7 @@
     border: none;
     box-sizing: content-box;
     transition: 0.2s linear;
+    text-align: center;
   }
   input[id="txt-input"] {
     width: 250px;
@@ -76,7 +80,21 @@
     transform: translateX(-2px);
     border-radius: 5px;
   }
-
+  .text-input {
+    margin-top: 2%;
+    font-size: 16px;
+    font-family: Montserrat, sans-serif;
+    color: #5e6472;
+    outline: none;
+    border: none;
+    box-sizing: content-box;
+    transition: 0.2s linear;
+    padding: 0.6em 1.4em 3.6em 0.8em;
+    text-align: center;
+  }
+  label {
+    padding: 0.8em 1.4em 0.4em 0.8em;
+  }
   /* //////////////////////////////////////////// */
   /* //////////////////////////////////////////// */
 
