almost done artwork details

--- a/client/src/components/SearchResults/_SearchResults.scss
+++ b/client/src/components/SearchResults/_SearchResults.scss
@@ -253,6 +253,7 @@ main {
       color: #18191b;
       font-size: 85%;
       padding-left: 1rem;
+      margin: auto;
 
       &.name-artist {
         color: #18191b;
