--- a/client/src/index.css
+++ b/client/src/index.css
@@ -613,6 +613,7 @@ nav #nav-right-container #nav-inner-r .link a::selection {
   color: #18191b;
   font-size: 85%;
   padding-left: 1rem;
+  margin: auto;
 }
 
 .filteredArtists a p.name-artist {
@@ -1568,6 +1569,96 @@ nav #nav-right-container #nav-inner-r .link a::selection {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.artwork-page {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, sans-serif;
+}
+
+.artwork-page .container {
+  max-width: 1250px;
+  border-radius: 5px;
+  margin: 10% auto;
+  width: 90%;
+  -webkit-box-shadow: 0 9px 50px rgba(191, 191, 191, 0.31);
+          box-shadow: 0 9px 50px rgba(191, 191, 191, 0.31);
+  padding: 2%;
+}
+
+.artwork-page .art-img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: auto;
+      -ms-flex-align: auto;
+          align-items: auto;
+  -ms-flex-line-pack: start;
+      align-content: start;
+  padding: 0 5px;
+}
+
+.artwork-page .artworks {
+  width: 100%;
+  height: auto;
+  padding: unset;
+  margin: 20px auto;
+  max-width: 1000px;
+}
+
+.artwork-page .name {
+  margin-top: 10px;
+  font-weight: 600;
+  font-size: 40pt;
+  color: #777;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.artwork-page .info {
+  font-size: 15pt;
+  color: #aaa;
+  text-align: center;
+  margin: 5px 7px 5px 7px;
+}
+
+.artwork-page .buttons {
+  display: inline-block;
+  color: #233948;
+  width: 280px;
+  height: 50px;
+  background: #fff;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  text-align: center;
+  -webkit-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+  margin: 30px auto;
+  letter-spacing: 0.05em;
+  -webkit-box-shadow: 0 9px 50px rgba(191, 191, 191, 0.31);
+          box-shadow: 0 9px 50px rgba(191, 191, 191, 0.31);
+}
+
+.artwork-page .edit-buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 
 :root {
