--- a/client/src/components/MessagesPage/_Messages.scss
+++ b/client/src/components/MessagesPage/_Messages.scss
@@ -36,6 +36,7 @@
   grid-template-columns: 70px auto;
   margin-bottom: 1em;
   text-decoration: none;
+  padding-left: 1rem;
 }
 .name-and-message {
   padding-left: 1em;
