--- a/client/src/components/Nav/_Nav.scss
+++ b/client/src/components/Nav/_Nav.scss
@@ -15,7 +15,7 @@ nav {
   transition: transform 0.5s, background-color 0.5s;
   border-bottom: none;
   border-color: rgba(255, 255, 255, 0.17);
-
+  z-index: 100;
   #nav-left-container {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
       Helvetica, Arial, sans-serif, sans-serif;
