--- a/client/src/components/Signup/_Signup.scss
+++ b/client/src/components/Signup/_Signup.scss
@@ -6,27 +6,24 @@
   }
 
   form {
-    width: 550px;
+    width: 90vw;
+    max-width: 550px;
     height: auto;
     border-radius: 5px;
-    margin: 10% auto;
+    margin: auto;
     box-shadow: 0 9px 50px hsla(0, 0%, 75%, 0.31);
-    padding: 2%;
+    padding: 1rem 2rem;
     background-image: linear-gradient(-225deg, #d3f0c7 50%, #9dd57c 50%);
-  }
-  /* form Container */
-  form .con {
     display: -webkit-flex;
     display: flex;
     -webkit-justify-content: space-around;
     justify-content: space-around;
     -webkit-flex-wrap: wrap;
     flex-wrap: wrap;
-    margin: 3% auto;
   }
   /* the header form form */
   header {
-    margin: 2% auto 7% auto;
+    margin: 2em auto 1em auto;
     text-align: center;
   }
   /* title form form */
@@ -40,55 +37,45 @@
     letter-spacing: 0.05em;
     color: #3e403f;
   }
-
+  label {
+    margin-left: 1em;
+  }
   .field-set {
+    width: 90vw;
+    max-width: 550px;
     display: flex;
     flex-direction: column;
   }
 
-  .input-item {
-    color: #333;
-    width: 280px;
-    height: 50px;
-    padding: 0 20px;
-    background: #fff;
-    border-radius: 5px;
-    outline: none;
-    border: none;
-  }
-
   /* inputs form  */
-  input[class="form-input"] {
-    margin-top: 2%;
+  input.form-input {
+    width: 90%;
+    margin: auto;
     padding: 15px;
     font-size: 16px;
     font-family: Montserrat, sans-serif;
     color: #5e6472;
     outline: none;
     border: none;
-    box-sizing: content-box;
+    box-sizing: border-box;
     transition: 0.2s linear;
   }
-  input[id="txt-input"] {
-    width: 250px;
-  }
+
   /* focus  */
   input:focus {
     transform: translateX(-2px);
     border-radius: 5px;
   }
 
-  /* //////////////////////////////////////////// */
-  /* //////////////////////////////////////////// */
-
   /* input[type="text"] {min-width: 250px;} */
   /* buttons  */
   button {
+    width: 90%;
     display: inline-block;
+    box-sizing: border-box;
+    margin-top: 3.5em;
     color: #233948;
-    width: 280px;
     height: 50px;
-    padding: 0 20px;
     background: #fff;
     border-radius: 5px;
     outline: none;
@@ -96,7 +83,6 @@
     cursor: pointer;
     text-align: center;
     transition: all 0.2s linear;
-    margin: 2% auto;
     letter-spacing: 0.05em;
   }
   .select-input {
