--- a/client/src/components/Login/_Login.scss
+++ b/client/src/components/Login/_Login.scss
@@ -94,11 +94,14 @@
   }
   label {
     padding: 0.8em 1.4em 0.4em 0.8em;
+    margin-left: 1em;
   }
-  /* //////////////////////////////////////////// */
-  /* //////////////////////////////////////////// */
+  .wrong-cred {
+    padding: 0.8em 1.4em 0.4em 0.8em;
+    margin-left: 1em;
+    margin-top: 1em;
+  }
 
-  /* input[type="text"] {min-width: 250px;} */
   /* buttons  */
   button {
     display: inline-block;
