--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,196 +18,6 @@
           box-shadow: 0 9px 50px rgba(191, 191, 191, 0.31);
 }
 
-.main-box {
-  /* form Container */
-  /* the header form form */
-  /* title form form */
-  /*  A welcome message or an explanation of the form */
-  /* inputs form  */
-  /* focus  */
-  /* buttons  */
-  /* Submits */
-  /* buttons hover */
-  /* buttons hover Animation */
-}
-
-.main-box * {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, sans-serif;
-}
-
-.main-box form {
-  width: 550px;
-  height: auto;
-  border-radius: 5px;
-  margin: 10% auto;
-  -webkit-box-shadow: 0 9px 50px rgba(191, 191, 191, 0.31);
-          box-shadow: 0 9px 50px rgba(191, 191, 191, 0.31);
-  padding: 2%;
-  background-image: linear-gradient(-225deg, #d3f0c7 50%, #9dd57c 50%);
-}
-
-.main-box form .con {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  margin: 3% auto;
-}
-
-.main-box header {
-  margin: 2% auto 7% auto;
-  text-align: center;
-}
-
-.main-box header h2 {
-  font-family: Montserrat, sans-serif;
-  font-size: 250%;
-  color: #3e403f;
-}
-
-.main-box header p {
-  letter-spacing: 0.05em;
-  color: #3e403f;
-}
-
-.main-box .field-set {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  text-align: start;
-  color: #333;
-}
-
-.main-box .input-item {
-  color: #333;
-  width: 280px;
-  height: 50px;
-  padding: 0 20px;
-  background: #fff;
-  border-radius: 5px;
-  outline: none;
-  border: none;
-  text-align: center;
-}
-
-.main-box input[class="form-input"] {
-  margin-top: 2%;
-  padding: 15px 150px 15px 150px;
-  font-size: 16px;
-  font-family: Montserrat, sans-serif;
-  color: #5e6472;
-  outline: none;
-  border: none;
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
-  -webkit-transition: 0.2s linear;
-  transition: 0.2s linear;
-  text-align: center;
-}
-
-.main-box input[id="txt-input"] {
-  width: 250px;
-}
-
-.main-box input:focus {
-  -webkit-transform: translateX(-2px);
-          transform: translateX(-2px);
-  border-radius: 5px;
-}
-
-.main-box .text-input {
-  margin-top: 2%;
-  font-size: 16px;
-  font-family: Montserrat, sans-serif;
-  color: #5e6472;
-  outline: none;
-  border: none;
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
-  -webkit-transition: 0.2s linear;
-  transition: 0.2s linear;
-  padding: 0.6em 1.4em 3.6em 0.8em;
-  text-align: center;
-}
-
-.main-box label {
-  padding: 0.8em 1.4em 0.4em 0.8em;
-  margin-left: 1em;
-}
-
-.main-box .wrong-cred {
-  padding: 0.8em 1.4em 0.4em 0.8em;
-  margin-left: 1em;
-  margin-top: 1em;
-}
-
-.main-box button {
-  display: inline-block;
-  color: #233948;
-  width: 280px;
-  height: 50px;
-  padding: 0 20px;
-  background: #fff;
-  border-radius: 5px;
-  outline: none;
-  border: none;
-  cursor: pointer;
-  text-align: center;
-  -webkit-transition: all 0.2s linear;
-  transition: all 0.2s linear;
-  margin: 2% auto;
-  letter-spacing: 0.05em;
-}
-
-.main-box .submits {
-  width: 48%;
-  display: inline-block;
-  margin-left: 2%;
-}
-
-.main-box button:hover {
-  -webkit-transform: translatey(3px);
-          transform: translatey(3px);
-  -webkit-box-shadow: none;
-          box-shadow: none;
-}
-
-.main-box button:hover {
-  -webkit-animation: ani9 0.4s ease-in-out infinite alternate;
-          animation: ani9 0.4s ease-in-out infinite alternate;
-}
-
-@-webkit-keyframes ani9 {
-  0% {
-    -webkit-transform: translateY(3px);
-            transform: translateY(3px);
-  }
-  100% {
-    -webkit-transform: translateY(5px);
-            transform: translateY(5px);
-  }
-}
-
-@keyframes ani9 {
-  0% {
-    -webkit-transform: translateY(3px);
-            transform: translateY(3px);
-  }
-  100% {
-    -webkit-transform: translateY(5px);
-            transform: translateY(5px);
-  }
-}
-
 nav {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, sans-serif;
   color: #7f7f7f;
@@ -827,9 +637,7 @@ nav #nav-right-container #nav-inner-r .link a::selection {
   /* focus  */
   /* input[type="text"] {min-width: 250px;} */
   /* buttons  */
-  /* Submits */
   /* buttons hover */
-  /* buttons hover Animation */
 }
 
 .main-box * {
@@ -858,7 +666,7 @@ nav #nav-right-container #nav-inner-r .link a::selection {
 }
 
 .main-box header {
-  margin: 2em auto 1em auto;
+  margin: 2rem auto 1rem auto;
   text-align: center;
 }
 
@@ -869,19 +677,19 @@ nav #nav-right-container #nav-inner-r .link a::selection {
 }
 
 .main-box header p {
-  letter-spacing: 0.05em;
+  letter-spacing: 0.05rem;
   color: #3e403f;
 }
 
 .main-box label {
-  padding: 0.8em 1.4em 0.4em 0.8em;
+  padding: 0.8rem 1.4rem 0.4rem 0.8rem;
   margin-left: 1em;
 }
 
 .main-box .wrong-cred {
-  padding: 0.8em 1.4em 0.4em 0.8em;
-  margin-left: 1em;
-  margin-top: 1em;
+  padding: 0em 1.4rem 0 0.8rem;
+  margin-left: 1rem;
+  margin-top: 1rem;
 }
 
 .main-box .field-set {
@@ -922,7 +730,7 @@ nav #nav-right-container #nav-inner-r .link a::selection {
   display: inline-block;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  margin-top: 3.5em;
+  margin: 1rem auto 1rem auto;
   color: #233948;
   height: 50px;
   background: #fff;
@@ -933,18 +741,22 @@ nav #nav-right-container #nav-inner-r .link a::selection {
   text-align: center;
   -webkit-transition: all 0.2s linear;
   transition: all 0.2s linear;
-  letter-spacing: 0.05em;
+  letter-spacing: 0.05rem;
 }
 
 .main-box .select-input {
-  padding: 1.3em 1.4em 1.3em 0.8em;
-  height: 50px;
-}
-
-.main-box .submits {
-  width: 48%;
-  display: inline-block;
-  margin-left: 2%;
+  width: 90%;
+  margin: auto;
+  padding: 15px;
+  font-size: 16px;
+  font-family: Montserrat, sans-serif;
+  color: #5e6472;
+  outline: none;
+  border: none;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-transition: 0.2s linear;
+  transition: 0.2s linear;
 }
 
 .main-box button:hover {
@@ -952,11 +764,19 @@ nav #nav-right-container #nav-inner-r .link a::selection {
           transform: translatey(3px);
   -webkit-box-shadow: none;
           box-shadow: none;
-}
-
-.main-box button:hover {
   -webkit-animation: ani9 0.4s ease-in-out infinite alternate;
           animation: ani9 0.4s ease-in-out infinite alternate;
+}
+
+@-webkit-keyframes ani9 {
+  0% {
+    -webkit-transform: translateY(3px);
+            transform: translateY(3px);
+  }
+  100% {
+    -webkit-transform: translateY(5px);
+            transform: translateY(5px);
+  }
 }
 
 @keyframes ani9 {
