--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,11 +1,10 @@
 @import "./components/Artwork/_Artwork.scss";
 @import "./components/Availabilities/_Availabilities.scss";
 @import "./components/DateAdder/_DateAdder.scss";
-@import "./components/Login/_Login.scss";
 @import "./components/Nav/_Nav.scss";
 @import "./components/SearchResults/_SearchResults.scss";
 @import "./components/MessagesPage/_Messages.scss";
-@import "./components/Signup/_Signup.scss";
+@import "./components/Signup/Form.scss";
 @import "./components/Profile/_Profile.scss";
 @import "./components/ArtworkDetails/_ArtworkDetails.scss";
 
