--- a/client/src/components/Nav/_Nav.scss
+++ b/client/src/components/Nav/_Nav.scss
@@ -50,81 +50,168 @@ nav {
     }
   }
 
-  #nav-right-container {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-      Helvetica, Arial, sans-serif, sans-serif;
+  input[type="checkbox"] {
+    display: none;
+    @media screen and (max-width: 680px) {
+      display: block;
+      width: 40px;
+      height: 32px;
+      position: absolute;
+      top: -7px;
+      left: -5px;
+
+      cursor: pointer;
+
+      opacity: 0; /* hide this */
+      z-index: 2; /* and place it over the hamburger */
+
+      -webkit-touch-callout: none;
+    }
+  }
+
+  ul {
     color: #7f7f7f;
     cursor: auto;
-    width: 100%;
-    padding: 0 15px;
-    position: relative;
-    display: table-cell;
-    vertical-align: middle;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    padding-top: 1.6rem;
+    font-family: Montserrat, sans-serif;
+    text-align: right;
+    font-size: 0;
 
-    #nav-inner-r {
-      color: #7f7f7f;
-      cursor: auto;
-      list-style: none;
-      margin: 0;
-      padding: 0;
+    .link {
       font-family: Montserrat, sans-serif;
-      text-align: right;
-      font-size: 0;
+      position: relative;
+      min-height: 22px;
+      font-size: 14px;
+      transition: background-color 0.5s, color 0.5s;
+      letter-spacing: 1px;
+      white-space: nowrap;
+      float: none;
+      display: inline-block;
+      vertical-align: bottom;
+      text-align: left;
+      background-color: rgba(0, 0, 0, 0);
+      text-decoration: none;
 
-      .link {
+      a {
+        list-style: none;
         font-family: Montserrat, sans-serif;
-        position: relative;
-        min-height: 22px;
-        font-size: 14px;
-        transition: background-color 0.5s, color 0.5s;
         letter-spacing: 1px;
         white-space: nowrap;
-        float: none;
-        display: inline-block;
-        vertical-align: bottom;
         text-align: left;
-        background-color: rgba(0, 0, 0, 0);
+        background-color: transparent;
+        display: block;
+        position: relative;
+        font-size: 12px;
+        font-weight: bold;
+        text-transform: uppercase;
+        padding: 0 10px;
+        color: #233948;
+        line-height: 60px;
+        height: 60px;
+
+        color: $color-accent;
         text-decoration: none;
 
-        a {
-          list-style: none;
-          font-family: Montserrat, sans-serif;
-          letter-spacing: 1px;
-          white-space: nowrap;
-          text-align: left;
-          background-color: transparent;
-          display: block;
-          position: relative;
-          font-size: 12px;
-          font-weight: bold;
-          text-transform: uppercase;
-          padding: 0 10px;
-          color: #233948;
-          line-height: 60px;
-          height: 60px;
+        transition: all 0.3s ease-in;
 
-          color: $color-accent;
-          text-decoration: none;
+        &:hover {
+          transition: all 0.3s ease-out;
+          box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 $color-accent inset;
+        }
 
-          transition: all 0.3s ease-in;
+        &:active {
+          transition: all 0.3s ease-out;
+          box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 $color-accent inset;
+        }
 
-          &:hover {
-            transition: all 0.3s ease-out;
-            box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 $color-accent inset;
-          }
-
-          &:active {
-            transition: all 0.3s ease-out;
-            box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 $color-accent inset;
-          }
-
-          &::selection {
-            color: white;
-            background: $color-accent;
-            text-shadow: none;
-          }
+        &::selection {
+          color: white;
+          background: $color-accent;
+          text-shadow: none;
         }
       }
+    }
+  }
+  @media screen and (max-width: 580px) {
+    ul {
+      display: none;
+    }
+    #menuToggle {
+      margin: auto;
+      padding: 0;
+      padding-top: 2.7rem;
+    }
+    #menuToggle input {
+      display: block;
+      width: 40px;
+      height: 32px;
+      position: absolute;
+      top: -7px;
+      left: -5px;
+
+      cursor: pointer;
+
+      opacity: 0; /* hide this */
+      z-index: 2; /* and place it over the hamburger */
+
+      -webkit-touch-callout: none;
+    }
+
+    /*
+ * Just a quick hamburger
+ */
+    #menuToggle span {
+      display: block;
+      width: 45px;
+      height: 8px;
+      margin-bottom: 5px;
+      position: relative;
+
+      background: #cdcdcd;
+      border-radius: 3px;
+
+      z-index: 1;
+
+      transform-origin: 4px 0px;
+
+      transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+        background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+    }
+
+    #menuToggle span:first-child {
+      transform-origin: 0% 0%;
+    }
+
+    #menuToggle span:nth-last-child(2) {
+      transform-origin: 0% 100%;
+    }
+
+    /* 
+ * Transform all the slices of hamburger
+ * into a crossmark.
+ */
+    #menuToggle input:checked ~ span {
+      opacity: 1;
+      transform: rotate(45deg) translate(-2px, -1px);
+      background: #232323;
+    }
+
+    /*
+ * But let's hide the middle one.
+ */
+    #menuToggle input:checked ~ span:nth-last-child(3) {
+      opacity: 0;
+      transform: rotate(0deg) scale(0.2, 0.2);
+    }
+
+    /*
+ * Ohyeah and the last one should go the other direction
+ */
+    #menuToggle input:checked ~ span:nth-last-child(2) {
+      transform: rotate(-45deg) translate(0, -1px);
     }
   }
 }
