--- a/client/src/index.css
+++ b/client/src/index.css
@@ -130,7 +130,6 @@ nav ul .link a {
   font-family: Montserrat, sans-serif;
   letter-spacing: 1px;
   white-space: nowrap;
-  text-align: left;
   background-color: transparent;
   display: block;
   position: relative;
@@ -188,14 +187,24 @@ nav ul .link a::selection {
     /*
  * Ohyeah and the last one should go the other direction
  */
-  }
-  nav ul {
-    display: none;
+    /*
+     * Make this absolute positioned
+     * at the top left of the screen
+     */
+    /*
+     * And let's fade it in from the right
+     */
   }
   nav #menuToggle {
-    margin: auto;
-    padding: 0;
-    padding-top: 2.7rem;
+    display: block;
+    position: absolute;
+    top: 50px;
+    right: 50px;
+    z-index: 1;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+     -ms-user-select: none;
+         user-select: none;
   }
   nav #menuToggle input {
     display: block;
@@ -213,8 +222,8 @@ nav ul .link a::selection {
   }
   nav #menuToggle span {
     display: block;
-    width: 45px;
-    height: 8px;
+    width: 33px;
+    height: 4px;
     margin-bottom: 5px;
     position: relative;
     background: #cdcdcd;
@@ -247,8 +256,45 @@ nav ul .link a::selection {
             transform: rotate(0deg) scale(0.2, 0.2);
   }
   nav #menuToggle input:checked ~ span:nth-last-child(2) {
+    opacity: 1;
     -webkit-transform: rotate(-45deg) translate(0, -1px);
             transform: rotate(-45deg) translate(0, -1px);
+  }
+  nav ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    margin: -100px 0 0 0;
+    padding-right: 50px;
+    padding-top: 125px;
+    right: -100px;
+    list-style-type: none;
+    -webkit-font-smoothing: antialiased;
+    /* to stop flickering of text in safari */
+    background-color: white;
+    -webkit-transform-origin: 0% 0%;
+            transform-origin: 0% 0%;
+    -webkit-transform: translate(100vw, 0);
+            transform: translate(100vw, 0);
+    -webkit-transition: all 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+    transition: all 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+  }
+  nav ul .link {
+    text-align: right;
+    padding: 10px 50px;
+    font-size: 22px;
+  }
+  nav #menuToggle input:checked ~ ul {
+    -webkit-transform: scale(1, 1);
+            transform: scale(1, 1);
+    opacity: 1;
   }
 }
 
