--- a/client/src/index.css
+++ b/client/src/index.css
@@ -665,14 +665,13 @@ nav {
   /* buttons hover */
   /* buttons hover Animation */
   /* buttons hover Animation */
-  /* form Container */
   /* inputs form  */
   /* focus  */ }
   .page .container {
     max-width: 1250px;
     border-radius: 5px;
     margin: 10% auto;
-    width: 90%;
+    width: 90vw;
     box-shadow: 0 9px 50px rgba(191, 191, 191, 0.31);
     padding: 2%; }
   .page .profile-banner {
@@ -793,6 +792,7 @@ nav {
     flex-direction: column;
     font-size: 15pt; }
   .page .desc {
+    line-height: 1.7rem;
     text-align: center;
     margin-top: 25px;
     margin: 25px 40px;
@@ -822,23 +822,14 @@ nav {
   @media (max-width: 990px) {
     .page .side-nav {
       display: none; } }
-  .page .my-messages {
-    display: inline-block;
-    text-decoration: none;
-    color: #233948;
-    text-align: center;
-    margin: 0 auto;
-    padding: 12px; }
   .page .button-dates {
     display: flex;
     flex-direction: row;
     justify-content: center; }
   .page .button-forms {
+    box-sizing: content-box;
     display: inline-block;
     color: #233948;
-    width: 280px;
-    height: 50px;
-    padding: 0 20px;
     background: #fff;
     border-radius: 5px;
     outline: none;
@@ -848,11 +839,21 @@ nav {
     transition: all 0.2s linear;
     margin: 30px 30px 30px 30px;
     letter-spacing: 0.05em;
-    box-shadow: 0 9px 50px rgba(191, 191, 191, 0.31); }
+    box-shadow: 0 9px 50px rgba(191, 191, 191, 0.31);
+    width: 280px;
+    height: 50px;
+    text-decoration: none;
+    color: #233948;
+    text-align: center; }
   .page .edit-buttons {
-    border-bottom: 1px solid #ededed; }
+    border-bottom: 1px solid #ededed;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: auto;
+    justify-content: center; }
   .page .button-edit-profile {
-    display: inline-block;
+    box-sizing: content-box;
     color: #233948;
     width: 280px;
     height: 50px;
@@ -868,6 +869,7 @@ nav {
     letter-spacing: 0.05em;
     box-shadow: 0 9px 50px rgba(191, 191, 191, 0.31); }
   .page .button-complete-profile {
+    box-sizing: content-box;
     display: inline-block;
     color: #233948;
     width: 280px;
@@ -886,7 +888,7 @@ nav {
   .page .submit {
     display: inline-block;
     color: #233948;
-    width: 500px;
+    width: 280px;
     height: 50px;
     background: #fff;
     border-radius: 5px;
@@ -895,8 +897,10 @@ nav {
     cursor: pointer;
     text-align: center;
     transition: all 0.2s linear;
-    margin: 50px 0px 0px 0px;
-    letter-spacing: 0.05em; }
+    margin: auto;
+    margin-top: 50px;
+    letter-spacing: 0.05em;
+    box-sizing: content-box; }
   .page .submit.submit-label {
     box-sizing: border-box;
     font-family: Montserrat, sans-serif;
@@ -979,22 +983,14 @@ nav {
     list-style: none;
     padding: 1em; }
   .page form {
-    width: 550px;
+    width: calc(100% - 4rem);
+    max-width: 550px;
     height: auto;
     border-radius: 5px;
-    margin: 2% auto;
+    margin: 1rem auto;
     box-shadow: 0 9px 50px rgba(191, 191, 191, 0.31);
-    padding: 2%;
-    background-color: #d3f0c7; }
-  .page form .con {
-    display: -webkit-flex;
-    display: flex;
-    -webkit-justify-content: space-around;
-    justify-content: center;
-    -webkit-flex-wrap: wrap;
-    flex-wrap: wrap;
-    margin: 3% auto; }
-  .page .field-set {
+    background-color: #d3f0c7;
+    padding: 2rem;
     display: flex;
     flex-direction: column;
     text-align: start;
@@ -1007,19 +1003,17 @@ nav {
     background: #fff;
     border-radius: 5px;
     outline: none;
-    border: none;
-    text-align: center; }
+    border: none; }
   .page input[class="form-input"] {
     margin-top: 2%;
-    padding: 15px 150px 15px 150px;
+    padding: 15px;
     font-size: 15px;
     font-family: Montserrat, sans-serif;
     color: #5e6472;
     outline: none;
     border: none;
     box-sizing: content-box;
-    transition: 0.2s linear;
-    text-align: center; }
+    transition: 0.2s linear; }
   .page input[id="txt-input"] {
     width: 250px; }
   .page input:focus {
@@ -1042,11 +1036,6 @@ nav {
     padding: 0.8em 1.4em 0.4em 0.8em; }
   .page #subcategory {
     font-size: 15px; }
-  .page .edit-buttons {
-    display: flex;
-    flex-direction: row;
-    margin-left: auto;
-    margin-right: auto; }
   .page .DateRangePicker {
     position: relative;
     display: flex;
