--- a/client/src/index.css
+++ b/client/src/index.css
@@ -778,14 +778,9 @@ nav {
   .page .info {
     font-size: 15pt;
     color: #aaa;
-    text-align: center;
     margin: 5px 7px 5px 7px; }
   .page .info-div {
-    text-align: center;
-    margin-top: 5px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around; }
+    margin-top: 5px; }
   .page .bio {
     display: block;
     align-items: flex-start;
@@ -930,6 +925,8 @@ nav {
     box-shadow: none; }
   .page .my-messages:hover {
     animation: ani9 0.4s ease-in-out infinite alternate; }
+  .page .row {
+    text-align: center; }
   .page .row .gallery {
     display: flex;
     flex-wrap: wrap;
