--- a/client/src/index.css
+++ b/client/src/index.css
@@ -238,10 +238,10 @@ nav {
 
 .searchForm {
   display: flex;
+  flex-direction: row;
   justify-content: center;
   justify-items: center;
   align-items: center;
-  grid-gap: 5px;
   margin: auto; }
   .searchForm .select-container select {
     height: 55px;
@@ -250,9 +250,12 @@ nav {
     line-height: 24px;
     color: #484848;
     background-color: #fff;
-    padding-top: 2em;
+    padding-top: 1.8em;
     border-radius: 0;
     border: 1px solid #dbdbdb; }
+  .searchForm #category {
+    padding-top: 0.8em;
+    padding-left: 0.5em; }
 
 .DateRangePickerInput {
   height: 53px; }
@@ -282,10 +285,6 @@ nav {
     left: 1.1em;
     top: 0.25em;
     color: #857f7f; }
-
-.searchForm button {
-  margin-left: 2em;
-  align-self: center; }
 
 .selects {
   display: flex; }
@@ -408,6 +407,7 @@ nav {
   display: block; }
 
 .filteredArtists {
+  width: 80vw;
   margin: 0;
   margin-top: 2em;
   list-style-type: none;
@@ -435,6 +435,15 @@ nav {
         font-size: 110%;
         margin-top: 1rem;
         margin-bottom: 0.3rem; }
+
+@media screen and (max-width: 666px) {
+  .searchForm {
+    flex-direction: column;
+    gap: 0.5em; }
+    .searchForm .select-container select {
+      width: 80vw; }
+    .searchForm .DateRangePickerInput {
+      width: 80vw; } }
 
 .messages-page {
   max-height: calc(100vh - 125px);
